Create entity for user.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/ksbs
+spring.datasource.username=root
+spring.datasource.password=zaq1@WSX
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
