--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ksbs
 spring.datasource.username=root
 spring.datasource.password=zaq1@WSX
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mefiudev678@gmail.com
-spring.mail.password=zaq1@WSX
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
