--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ksbs
 spring.datasource.username=root
 spring.datasource.password=zaq1@WSX
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
